<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:id="@+id/rl_click"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E4E7E7"
        android:padding="5dp">

        <ImageView
            android:id="@+id/image_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/image_icon"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@id/image_icon"
            android:text="@string/app_name"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/version_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/image_icon"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/image_icon"
            android:textColor="#595959"
            android:textSize="16sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/about_info_text"
                android:textColor="#312e2e"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_contact_we"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/about_contact_text"
                android:textColor="#312e2e"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_feedback_qq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/about_feedback_text"
                android:textColor="#312e2e"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/bt_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/button_bg"
        android:padding="10dp"
        android:text="@string/share_button_text"
        android:textColor="#ffffff"
        android:textSize="16sp" />

</LinearLayout>
